# vision-2

./: README.md  flags.json  pyproject.toml  students.json
vision-brain/: README.md  app.py  audio.py  eye_cheat_detector.py  face_move.py  face_multi.py  flags.json  hand.py  lip_cheat_detector.py  phone.py  pyproject.toml  students.json
vision-brain/templates/: audit.html  dashboard.html  index.html  login.html
