[project]
name = "vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eventlet>=0.40.4",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-socketio>=5.6.1",
    "librosa>=0.11.0",
    "mediapipe>=0.10.32",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "setuptools<70",
    "simple-websocket>=1.1.0",
    "tensorflow>=2.21.0",
    "tensorflow-hub>=0.16.1",
    "ultralytics>=8.4.23",
    "torch",
    "torchvision",
    "torchaudio",
    "imageio[ffmpeg]",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
